[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognitive-memory"
version = "0.2.0"
description = "Biologically-inspired agent memory with decay, consolidation, and tiered storage"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bhekani Khumalo" },
]
keywords = ["memory", "ai", "agents", "cognitive", "decay", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/bhekanik/cognitive-memory"
Documentation = "https://bhekanik.github.io/cognitive-memory"
Repository = "https://github.com/bhekanik/cognitive-memory"
Issues = "https://github.com/bhekanik/cognitive-memory/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cognitive_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120
